Rename grunt tasks folder. Add sassline

--- a/src/stylesheets/.sass-lint.yml
+++ b/src/stylesheets/.sass-lint.yml
@@ -7,6 +7,7 @@ files:
   include: '**/*.s+(a|c)ss'
   ignore:
     - './**/vendor/**/*'
+    - './**/hacks/**/*'
 # Rules, see https://github.com/sasstools/sass-lint/tree/master/docs/rules
 rules:
   attribute-quotes: true
