--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-lodash": "^3.2.0",
+    "babel-plugin-syntax-flow": "^6.8.0",
     "babel-plugin-typecheck": "^3.9.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
+    "express": "^4.14.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-express-server": "^0.5.3",
     "grunt-open": "^0.2.3",
