--- a/.sassdocrc
+++ b/.sassdocrc
@@ -1,11 +1,14 @@
 {
 	"dest": "./dist/docs/sass",
+	"exclude": [
+		"**/vendor/**/*.scss"
+	],
 	"display": {
 		"annotations": {
-			"function": ["description", "parameter", "return", "example", "throw", "require", "usedby", "since", "see", "todo", "link", "author"],
-			"mixin": ["description", "parameter", "content", "output", "example", "throw", "require", "usedby", "since", "see", "todo", "link", "author"],
+			"function": ["description", "return", "throw", "require", "usedby", "since", "see", "todo", "link", "author"],
+			"mixin": ["description", "content", "output", "throw", "require", "usedby", "since", "see", "todo", "link", "author"],
 			"placeholder": ["description", "example", "throw", "require", "usedby", "since", "see", "todo", "link", "author"],
-			"variable": ["description", "type", "property", "require", "example", "usedby", "since", "see", "todo", "link", "author"]
+			"variable": ["description", "type", "require", "example", "usedby", "since", "see", "todo", "link", "author"]
 		},
 		"access": ["public", "private"],
 		"alias": false,
