Add base accessible tabs structure including jquery, modernizr, plugin architecture

--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "grunt-documentation": "^1.2.0",
     "grunt-eslint": "^19.0.0",
     "grunt-jsdoc": "^2.1.0",
+    "grunt-modernizr": "^1.0.2",
     "grunt-sass": "^1.2.0",
     "grunt-sassdoc": "^2.0.2",
     "grunt-webpack": "^1.0.11",
     "html-minifier": "^3.0.1",
+    "jquery": "^3.1.0",
     "jsdoc-babel": "^0.2.1",
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.0",
