--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   "devDependencies": {
     "grunt-contrib-watch": "^1.0.0",
     "grunt-express-server": "^0.5.3",
-    "grunt-open": "^0.2.3",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-notifier": "^1.3.0"
+    "grunt-open": "^0.2.3"
+    "webpack-dev-server": "^1.15.2",
+    "webpack-notifier": "^1.4.1"
   },
   "dependencies": {
     "babel-core": "^6.10.4",
@@ -49,9 +49,9 @@
     "babel-preset-es2015": "^6.9.0",
     "chroma-js": "^1.1.1",
     "compression": "^1.6.2",
-    "eslint": "^3.0.0",
+    "eslint": "^3.5.0",
     "eslint-loader": "^1.4.0",
-    "eslint-plugin-flowtype": "^2.3.0",
+    "eslint-plugin-flowtype": "^2.17.1",
     "express": "^4.14.0",
     "extend": "^3.0.0",
     "favicon": "0.0.2",
@@ -75,11 +75,11 @@
     "load-grunt-tasks": "^3.5.0",
     "lodash": "^4.13.1",
     "node-common-errors": "^0.4.0",
-    "node-sass": "^3.8.0",
-    "nunjucks": "^2.4.2",
+    "node-sass": "^3.10.0",
+    "nunjucks": "^2.5.2",
     "sassdoc-extras": "^2.4.1",
     "serve-favicon": "^2.3.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
   },
   "engines": {
     "node": ">=4"
