--- a/src/javascripts/.eslintrc.json
+++ b/src/javascripts/.eslintrc.json
@@ -4,6 +4,11 @@
     "es6": true,
     "commonjs": true
   },
+  "globals": {
+  	"process": false,
+  	"$": false,
+  	"PRODUCTION": false
+  },
   "extends": "eslint:recommended",
   "parser": "babel-eslint",
   "plugins": [
