--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "grunt-contrib-watch": "^1.0.0",
     "grunt-express-server": "^0.5.3",
-    "grunt-open": "^0.2.3",
+    "time-grunt": "^1.4.0",
     "webpack-dev-server": "^1.15.2",
     "webpack-notifier": "^1.4.1"
   },
@@ -57,6 +57,7 @@
     "favicon": "0.0.2",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
+    "grunt-concurrent": "^2.3.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-documentation": "^1.2.0",
     "grunt-env": "^0.4.4",
@@ -64,12 +65,12 @@
     "grunt-jsdoc": "^2.1.0",
     "grunt-modernizr": "^1.0.2",
     "grunt-newer": "^1.2.0",
-    "grunt-parallel": "^0.5.1",
     "grunt-sass": "^1.2.1",
     "grunt-sass-lint": "^0.2.0",
     "grunt-sassdoc": "^2.0.2",
     "grunt-webpack": "^1.0.11",
     "html-minifier": "^3.0.1",
+    "jit-grunt": "^0.10.0",
     "jquery": "^3.1.0",
     "jsdoc-babel": "^0.2.1",
     "load-grunt-config": "^0.19.2",
