--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "experience",
+  "name": "nice-experience",
   "version": "1.0.0",
   "description": "Your source for creating beautiful, consistent experiences across NICE",
   "keywords": [
@@ -16,6 +16,7 @@
     "url": "https://github.com/nhsevidence/NICE-Experience.git"
   },
   "main": "web/server/index.js",
+  "browser": "src/javascripts",
   "scripts": {
     "start": "grunt",
     "webpack:dev": "SET \"NODE_ENV=development\" && webpack --progress --colors --display-error-details",
