--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,8 @@
 			"disable": { "production": true }
 		}],
 		"syntax-flow",
-		"transform-flow-strip-types"
+		"transform-flow-strip-types",
+		"transform-es3-member-expression-literals",
+		"transform-es3-property-literals"
 	]
 }
