--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-lodash": "^3.2.0",
     "babel-plugin-syntax-flow": "^6.8.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-plugin-typecheck": "^3.9.0",
-    "babel-polyfill": "^6.9.1",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.9.0",
     "chroma-js": "^1.1.1",
     "compression": "^1.6.2",
@@ -82,6 +84,7 @@
     "nunjucks": "^2.5.2",
     "sassdoc-extras": "^2.4.1",
     "serve-favicon": "^2.3.0",
+    "string-replace-webpack-plugin": "0.0.3",
     "webpack": "^1.13.2"
   },
   "engines": {
