Update ES Lint rules for switch statement

--- a/src/javascripts/.eslintrc.json
+++ b/src/javascripts/.eslintrc.json
@@ -22,7 +22,8 @@
     "no-unused-vars": "warn",
     "indent": [
       "error",
-      "tab"
+      "tab",
+      { "SwitchCase", "1" }
     ],
     "linebreak-style": 0,
     "quotes": [
