--- a/src/javascripts/.eslintrc.json
+++ b/src/javascripts/.eslintrc.json
@@ -23,7 +23,7 @@
     "indent": [
       "error",
       "tab",
-      { "SwitchCase", "1" }
+      { "SwitchCase": 1 }
     ],
     "linebreak-style": 0,
     "quotes": [
