--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack:dev": "SET \"NODE_ENV=development\" && webpack --progress --colors --display-error-details",
     "webpack:dist": "SET \"NODE_ENV=production\" && webpack --config ./webpack.production.config.js",
     "test": "mocha test/**/*.spec.js --require babel-core/register",
+    "test:coverage": "node ./node_modules/istanbul/lib/cli cover node_modules/mocha/bin/_mocha -- --compilers js:babel-register --recursive test",
     "test:watch": "mocha test/**/*.spec.js --require babel-core/register --reporter min --watch",
     "lint": "grunt lint",
     "serve": "set PORT=54321&& node web/server",
@@ -81,6 +82,7 @@
     "grunt-sassdoc": "^2.0.2",
     "grunt-webpack": "^1.0.11",
     "html-minifier": "^3.0.1",
+    "istanbul": "^1.1.0-alpha.1",
     "jit-grunt": "^0.10.0",
     "jquery": "^3.1.0",
     "jsdoc-babel": "^0.2.1",
