--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-plugin-typecheck": "^3.9.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.9.0",
+    "chai": "^3.5.0",
     "chroma-js": "^1.1.1",
     "compression": "^1.6.2",
     "eslint": "^3.5.0",
@@ -96,7 +97,8 @@
     "nunjucks": "^2.5.2",
     "sassdoc-extras": "^2.4.1",
     "serve-favicon": "^2.3.0",
-    "should": "^11.1.0",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
     "string-replace-webpack-plugin": "0.0.3",
     "webpack": "^1.13.2"
   },
