--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "grunt-sass": "^1.2.1",
     "grunt-sass-lint": "^0.2.0",
     "grunt-sassdoc": "^2.0.2",
+    "grunt-webfont": "^1.6.0",
     "grunt-webpack": "^1.0.11",
     "html-minifier": "^3.0.1",
     "istanbul": "^1.1.0-alpha.1",
