--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "jquery": "^3.1.1",
     "jsdoc-babel": "^0.2.1",
     "jsdom": "^9.5.0",
+    "keycode": "^2.1.7",
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.5.0",
     "lodash": "^4.16.2",
