--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "main": "web/server/index.js",
   "browser": "src/javascripts",
   "scripts": {
-    "start": "grunt",
+    "start": "grunt --color",
     "webpack:dev": "SET \"NODE_ENV=development\" && webpack --progress --colors --display-error-details",
     "webpack:dist": "SET \"NODE_ENV=production\" && webpack --config ./webpack.production.config.js",
-    "test": "mocha test/**/*.spec.js --require babel-core/register test/_setup.js",
-    "test:watch": "mocha test/**/*.spec.js --require babel-core/register test/_setup.js --reporter min --watch",
+    "test": "mocha test/**/*.spec.js --require babel-core/register test/_setup.js --color",
+    "test:watch": "mocha test/**/*.spec.js --require babel-core/register test/_setup.js --reporter min --watch --color",
     "test:coverage": "node ./node_modules/istanbul/lib/cli cover node_modules/mocha/bin/_mocha -- --compilers js:babel-register --require test/_setup.js test/**/*.spec.js",
-    "lint": "grunt lint",
-    "serve": "set PORT=54321&& node web/server",
+    "lint": "grunt lint --color",
+    "serve": "set PORT=54321&& node web/server --color",
     "prepublish": "grunt prepublish"
   },
   "config": {
@@ -59,6 +59,7 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
+    "chalk": "^1.1.3",
     "chroma-js": "^1.1.1",
     "compression": "^1.6.2",
     "eslint": "^3.6.1",
@@ -94,6 +95,7 @@
     "load-grunt-tasks": "^3.5.0",
     "lodash": "^4.16.2",
     "mocha": "^3.1.0",
+    "moment": "^2.15.1",
     "node-common-errors": "^0.4.0",
     "node-sass": "^3.10.0",
     "nunjucks": "^2.5.2",
