Introduce mocha clean to reduce stack trace

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "start": "grunt --color",
     "webpack:dev": "SET \"NODE_ENV=development\" && webpack --progress --colors --display-error-details",
     "webpack:dist": "SET \"NODE_ENV=production\" && webpack --config ./webpack.production.config.js",
-    "test": "mocha test/**/*.spec.js --require babel-core/register test/_setup.js --color",
-    "test:watch": "mocha test/**/*.spec.js --require babel-core/register test/_setup.js --reporter min --watch --color",
-    "test:coverage": "node ./node_modules/istanbul/lib/cli cover node_modules/mocha/bin/_mocha -- --compilers js:babel-register --require test/_setup.js test/**/*.spec.js",
+    "test": "mocha test/**/*.spec.js --require babel-core/register --require mocha-clean --require test/_setup.js --color",
+    "test:watch": "mocha test/**/*.spec.js --require babel-core/register --require mocha-clean --require test/_setup.js --reporter min --watch --color",
+    "test:coverage": "node ./node_modules/istanbul/lib/cli cover node_modules/mocha/bin/_mocha -- --compilers js:babel-register --require mocha-clean --require test/_setup.js test/**/*.spec.js --color",
     "lint": "grunt lint --color",
     "serve": "set PORT=54321&& node web/server --color",
     "prepublish": "grunt prepublish"
@@ -95,6 +95,7 @@
     "load-grunt-tasks": "^3.5.0",
     "lodash": "^4.16.2",
     "mocha": "^3.1.0",
+    "mocha-clean": "^1.0.0",
     "moment": "^2.15.1",
     "node-common-errors": "^0.4.0",
     "node-sass": "^3.10.0",
