--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chalk": "^1.1.3",
     "chroma-js": "^1.1.1",
     "compression": "^1.6.2",
