--- a/.sassdocrc
+++ b/.sassdocrc
@@ -5,10 +5,11 @@
 	],
 	"display": {
 		"annotations": {
-			"function": ["description", "return", "throw", "require", "usedby", "since", "see", "todo", "link", "author"],
-			"mixin": ["description", "content", "output", "throw", "require", "usedby", "since", "see", "todo", "link", "author"],
-			"placeholder": ["description", "example", "throw", "require", "usedby", "since", "see", "todo", "link", "author"],
-			"variable": ["description", "type", "require", "example", "usedby", "since", "see", "todo", "link", "author"]
+			"function": ["description", "return", "throw", "require", "usedby", "since", "see", "todo", "link"],
+			"mixin": ["description", "content", "output", "throw", "require", "usedby", "since", "see", "todo", "link"],
+			"placeholder": ["description", "example", "throw", "require", "usedby", "since", "see", "todo", "link"],
+			"variable": ["description", "type", "require", "example", "usedby", "since", "see", "todo", "link"],
+			"css": ["description", "require", "usedby", "since", "see", "todo", "link"]
 		},
 		"access": ["public", "private"],
 		"alias": false,
