--- a/.sassdocrc
+++ b/.sassdocrc
@@ -6,10 +6,10 @@
 	"display": {
 		"annotations": {
 			"function": ["description", "return", "throw", "require", "usedby", "since", "see", "todo", "link"],
-			"mixin": ["description", "content", "output", "throw", "require", "usedby", "since", "see", "todo", "link"],
+			"mixin": ["description", "content", "output", "throw", "require", "example", "usedby", "since", "see", "todo", "link"],
 			"placeholder": ["description", "example", "throw", "require", "usedby", "since", "see", "todo", "link"],
 			"variable": ["description", "type", "require", "example", "usedby", "since", "see", "todo", "link"],
-			"css": ["description", "require", "usedby", "since", "see", "todo", "link"]
+			"css": ["description", "require", "example", "usedby", "since", "see", "todo", "link"]
 		},
 		"access": ["public", "private"],
 		"alias": false,
@@ -22,7 +22,8 @@
 		"helpers": "Helpers",
 		"typography": "Typography",
 		"components": "Components",
-		"hacks": "Hacks"
+		"hacks": "Hacks",
+		"grid": "Grid"
 	},
 	"package": "./package.json",
 	"theme": "./src/stylesheets/sassdoc-nice-theme"
