--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "test:watch": "mocha src/**/*.test.js test/**/*.spec.js --require babel-core/register --require mocha-clean --require test/_setup.js --reporter min --watch --color",
     "test:coverage": "node ./node_modules/istanbul/lib/cli cover node_modules/mocha/bin/_mocha -- --compilers js:babel-register --require mocha-clean --require test/_setup.js src/**/*.test.js test/**/*.spec.js --color",
     "// LINTING": "",
-    "lint": "grunt lint --color"
+    "lint": "grunt lint --color",
+    "// RELEASE": "",
+    "release": "grunt release --color"
   },
   "config": {
     "//": "Banner is used for prepending to compiled JS and CSS",
