--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chalk": "^1.1.3",
+    "compression": "^1.6.2",
+    "debug": "^2.6.4",
     "eslint": "^3.6.1",
     "eslint-loader": "^1.4.0",
     "eslint-plugin-flowtype": "^2.19.0",
@@ -80,6 +82,7 @@
     "grunt-sass-lint": "^0.2.2",
     "grunt-webfont": "^1.6.0",
     "grunt-webpack": "^1.0.11",
+    "html-minifier": "^3.4.3",
     "istanbul": "^1.1.0-alpha.1",
     "jit-grunt": "^0.10.0",
     "jsdom": "^9.5.0",
@@ -93,6 +96,7 @@
     "nunjucks": "^3.0.0",
     "pixrem": "^3.0.2",
     "postcss-banner": "^3.0.0",
+    "serve-favicon": "^2.4.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "string-replace-webpack-plugin": "0.0.4",
