--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-documentation": "^1.2.3",
     "grunt-env": "^0.4.4",
     "grunt-eslint": "^19.0.0",
     "grunt-express-server": "^0.5.3",
@@ -80,6 +81,7 @@
     "grunt-release-it": "^1.0.1",
     "grunt-sass": "^2.0.0",
     "grunt-sass-lint": "^0.2.2",
+    "grunt-sassdoc": "^2.0.2",
     "grunt-webfont": "^1.6.0",
     "grunt-webpack": "^1.0.11",
     "html-minifier": "^3.4.3",
