--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "moment": "^2.15.1",
     "node-common-errors": "^0.4.0",
     "nunjucks": "^3.0.0",
+    "nunjucks-loader": "^2.4.8",
     "pixrem": "^3.0.2",
     "postcss-banner": "^3.0.0",
     "serve-favicon": "^2.4.2",
