--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "nice-experience-site",
-  "homepage": "https://github.com/nhsevidence/NICE-Experience",
+  "name": "nice-design-system-site",
+  "homepage": "https://nhsevidence.github.io/nice-design-system/",
   "authors": [
     "ediblecode <ian.routledge@nice.org.uk>"
   ],
