Update design system version and include nice icons

--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ sass:
   load_paths:
       - _sass
       - bower_components/nice-design-system/src/stylesheets
+      - bower_components/nice-icons/dist/
 
 # Defaults
 defaults:
