--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "nice-design-system": "^0.2.17"
+    "nice-design-system": "^0.3.0",
+    "nice-icons": "^1.1.0"
   }
 }
