--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "scripts": {
     "start": "grunt --color --timing",
     "dist": "grunt dist --color",
+    "dist:teamcity": "npm run lint && npm run test:coverage:teamcity && grunt css:dist --color && grunt docs --color && grunt webpack",
     "// JAVASCRIPT": "",
     "webpack": "SET \"NODE_ENV=production\" && webpack --progress --colors --display-error-details",
     "// TESTS": "",
     "test": "mocha src/**/*.test.js test/**/*.test.js --require babel-core/register --require mocha-clean --require test/_setup.js --color",
+    "test:teamcity": "mocha --reporter mocha-teamcity-reporter src/**/*.test.js test/**/*.test.js --require babel-core/register --require mocha-clean --require test/_setup.js --color",
     "test:watch": "mocha src/**/*.test.js test/**/*.test.js --require babel-core/register --require mocha-clean --require test/_setup.js --reporter min --watch --color",
     "test:coverage": "node ./node_modules/istanbul/lib/cli cover node_modules/mocha/bin/_mocha -- --compilers js:babel-register --require mocha-clean --require test/_setup.js src/**/*.test.js test/**/*.test.js --color",
+    "test:coverage:teamcity": "nyc --reporter=teamcity --reporter=html npm run test:teamcity --color",
     "// LINTING": "",
     "lint": "grunt lint --color",
     "// RELEASE": "",
@@ -61,6 +64,7 @@
     "chalk": "^2.3.0",
     "compression": "^1.6.2",
     "debug": "^3.1.0",
+    "each-async": "^1.0.0",
     "es3ify-loader": "^0.2.0",
     "eslint": "^4.9.0",
     "eslint-loader": "^1.4.0",
@@ -102,6 +106,7 @@
     "pixrem": "^4.0.1",
     "postcss-banner": "^3.0.0",
     "serve-favicon": "^2.4.2",
+    "sigmund": "^1.0.1",
     "sinon": "^4.0.2",
     "sinon-chai": "^2.8.0",
     "string-replace-webpack-plugin": "0.1.3",
@@ -112,7 +117,9 @@
   },
   "dependencies": {
     "@nice-digital/icons": "^1.1.0",
-    "keycode": "^2.1.7"
+    "keycode": "^2.1.7",
+    "mocha-teamcity-reporter": "^1.1.1",
+    "nyc": "^11.3.0"
   },
   "engines": {
     "node": ">=4"
