--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-release-it": "^1.0.1",
+    "grunt-replace": "^1.0.1",
     "grunt-webfont": "^1.6.0",
     "load-grunt-config": "^0.19.2"
   }
