--- a/package.json
+++ b/package.json
@@ -112,8 +112,7 @@
   },
   "dependencies": {
     "@nice-digital/icons": "^1.3.0",
-    "keycode": "^2.1.7",
-    "marked": "^0.3.12"
+    "keycode": "^2.1.7"
   },
   "engines": {
     "node": ">=4"
