--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system",
-  "version": "0.5.0-beta.3",
+  "version": "5.0.0",
   "description": "Your source for creating beautiful, consistent experiences across NICE",
   "keywords": [
     "css",
