--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Naming
 name:             NICE Design System
+title:            NICE Design System
 description:      Your source for creating beautiful, consistent experiences across NICE
 
 # Dependencies
