--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run webfont",
     "webfont": "grunt dist --color",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No tests :)\" && exit 0",
     "readme": "doctoc ./README.md && babel-node ./scripts/readme-replacer.js",
     "lint": "eslint .",
     "// Releasing": "",
