Remove all dependencies, to start from scratch

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@nice-digital/design-system",
-  "version": "0.5.3",
+  "name": "nice-design-system",
+  "private": true,
+  "version": "0.0.1",
   "description": "Your source for creating beautiful, consistent experiences across NICE",
   "keywords": [
     "css",
@@ -20,22 +21,7 @@
   "main": "src/javascripts/index.js",
   "browser": "src/javascripts",
   "scripts": {
-    "start": "grunt --color --timing",
-    "dist": "grunt dist --color",
-    "dist:teamcity": "grunt dist:teamcity --color",
-    "// JAVASCRIPT": "",
-    "webpack": "SET \"NODE_ENV=production\" && webpack --progress --colors --display-error-details",
-    "// TESTS": "",
-    "test": "mocha src/**/*.test.js test/**/*.test.js --require babel-core/register --require mocha-clean --require test/_setup.js --color",
-    "test:teamcity": "grunt test:mocha-teamcity-reporter --color",
-    "test:watch": "mocha src/**/*.test.js test/**/*.test.js --require babel-core/register --require mocha-clean --require test/_setup.js --reporter min --watch --color",
-    "test:coverage": "nyc --reporter=html npm run test --color",
-    "test:coverage:teamcity": "nyc --reporter=teamcity --reporter=html npm run test:teamcity --color",
-    "// LINTING": "",
-    "lint": "grunt lint --color",
-    "// RELEASE": "",
-    "release": "grunt release-it --color",
-    "release:minor": "grunt release-it:minor --color"
+
   },
   "config": {
     "//": "Banner is used for prepending to compiled JS and CSS",
@@ -48,82 +34,9 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@nice-digital/eslint-config": "^1.0.1",
-    "autoprefixer": "^7.2.4",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-syntax-flow": "^6.8.0",
-    "babel-plugin-transform-flow-strip-types": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-env": "^1.7.0",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "chalk": "^2.3.0",
-    "compression": "^1.6.2",
-    "debug": "^3.1.0",
-    "es3ify-loader": "^0.2.0",
-    "eslint": "^4.15.0",
-    "eslint-loader": "^1.4.0",
-    "eslint-plugin-flowtype": "^2.41.0",
-    "express": "^4.14.0",
-    "extend": "^3.0.0",
-    "grunt": "^1.0.3",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.1",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-documentation": "^1.2.3",
-    "grunt-env": "^0.4.4",
-    "grunt-eslint": "^20.1.0",
-    "grunt-express-server": "^0.5.3",
-    "grunt-mocha-test": "^0.13.2",
-    "grunt-modernizr": "^1.0.3",
-    "grunt-newer": "^1.2.0",
-    "grunt-postcss": "^0.9.0",
-    "grunt-release-it": "^1.0.1",
-    "grunt-sass": "^2.0.0",
-    "grunt-sass-lint": "^0.2.2",
-    "grunt-sassdoc": "^2.0.2",
-    "grunt-webpack": "^3.0.2",
-    "html-minifier": "^3.5.8",
-    "istanbul": "^1.1.0-alpha.1",
-    "jit-grunt": "^0.10.0",
-    "jquery": "^3.1.1",
-    "jsdom": "^11.5.1",
-    "load-grunt-config": "^0.19.2",
-    "load-grunt-tasks": "^3.5.0",
-    "lodash": "^4.17.11",
-    "mocha": "^4.1.0",
-    "mocha-clean": "^1.0.0",
-    "mocha-teamcity-reporter": "^1.1.1",
-    "moment": "^2.20.1",
-    "node-common-errors": "^0.4.0",
-    "nunjucks": "^3.0.0",
-    "nunjucks-loader": "^2.4.8",
-    "nyc": "^11.3.0",
-    "pixrem": "^4.0.1",
-    "postcss-banner": "^3.0.0",
-    "serve-favicon": "^2.4.2",
-    "sinon": "^4.1.4",
-    "sinon-chai": "^2.8.0",
-    "string-replace-webpack-plugin": "0.1.3",
-    "time-grunt": "^1.4.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.9.3"
+    "@nice-digital/eslint-config": "^1.0.1"
   },
   "dependencies": {
-    "@nice-digital/icons": "^1.5.0",
-    "keycode": "^2.1.7"
-  },
-  "engines": {
-    "node": ">=4"
-  },
-  "files": [
-    "dist",
-    "src"
-  ]
+    "@nice-digital/icons": "^1.5.0"
+  }
 }
