Move core JS into core project

--- a/packages/nds-core/package.json
+++ b/packages/nds-core/package.json
@@ -9,10 +9,11 @@
   ],
   "homepage": "https://nhsevidence.github.io/nice-design-system/",
   "license": "MIT",
-  "main": "lib/nds-core.js",
+  "main": "lib/core.js",
+  "module": "es/core.js",
+  "style": "scss/core.scss",
   "directories": {
     "lib": "lib",
-    "es": "es",
     "test": "__tests__"
   },
   "files": [
