--- a/.flowconfig
+++ b/.flowconfig
@@ -1,1 +1,22 @@
-# Start type checking here
+[ignore]
+.*/node_modules/.*
+.*/coverage/.*
+.*/es/.*
+.*/lib/.*
+.*/dist/.*
+.*/__tests__/.*
+
+[include]
+
+[libs]
+flow-typed
+
+[lints]
+
+[options]
+suppress_comment= \\(.\\|\n\\)*\\$FlowIgnore
+module.name_mapper='^@nice-digital\/nds-\([^\/]+\)$' -> '<PROJECT_ROOT>/packages/nds-\1/src/\1.js'
+module.name_mapper='^@nice-digital\/nds-\([^\/]+\)\/lib\/\(.*\)$' -> '<PROJECT_ROOT>/packages/nds-\1/src/\2.js'
+module.name_mapper.extension='scss' -> '<PROJECT_ROOT>/flow/SCSSFlowStub.js.flow'
+
+[strict]
