--- a/package.json
+++ b/package.json
@@ -15,8 +15,24 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@nice-digital/eslint-config": "^1.0.1",
-    "lerna": "^3.5.1"
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.9.0",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.87.0",
+    "jest": "^23.6.0",
+    "lerna": "^3.5.1",
+    "node-sass": "^4.10.0",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
     "@nice-digital/icons": "^1.5.0"
