--- a/packages/nds-action-banner/package.json
+++ b/packages/nds-action-banner/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@nice-digital/nds-tag",
+  "name": "@nice-digital/nds-action-banner",
   "version": "1.0.0",
-  "description": "Tag component for the NICE Design System",
+  "description": "Action banner component for the NICE Design System",
   "keywords": [
-    "tag"
+    "banner"
   ],
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://nhsevidence.github.io/nice-design-system/",
   "license": "MIT",
-  "main": "lib/Tag.js",
-  "module": "es/Tag.js",
-  "style": "scss/tag.scss",
+  "main": "lib/ActionBanner.js",
+  "module": "es/ActionBanner.js",
+  "style": "scss/action-banner.scss",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
