--- a/packages/nds-in-page-nav/package.json
+++ b/packages/nds-in-page-nav/package.json
@@ -27,5 +27,8 @@
   },
   "bugs": {
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.1.5"
   }
 }
