--- a/packages/nds-maintain-ratio/package.json
+++ b/packages/nds-maintain-ratio/package.json
@@ -28,5 +28,8 @@
   },
   "bugs": {
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.1.5"
   }
 }
