--- a/packages/nds-stacked-nav/package.json
+++ b/packages/nds-stacked-nav/package.json
@@ -30,5 +30,8 @@
   },
   "bugs": {
     "url": "https://github.com/nhsevidence/nice-design-system/issues"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.1.5"
   }
 }
